@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.1.12 (05 Apr 2010)
+
+  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.1.12.ebuild:
+  Bump version.
+
   29 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-client-9999.ebuild:
   Add depend xdialog and kdialog to depend.
